# ghostctl

./: .gitignore  .pre-commit-config.yaml  API_ANALYSIS.md  CLAUDE.md  CLI_REFERENCE.md  Dockerfile  README.md  SECURITY.md  TEST_RESULTS.md  docker-compose-test.yaml  docker-compose.yml  pyproject.toml  setup.cfg  test_auth.py  test_connection.py  test_setup.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
ghostctl/: __init__.py  __main__.py  app.py  auth.py  client.py  config.py  exceptions.py  output.py  render.py  retry.py
ghostctl/cmds/: __init__.py  cards.py  config.py  export.py  images.py  members.py  pages.py  posts.py  settings.py  tags.py  themes.py
ghostctl/models/: __init__.py  image.py  member.py  newsletter.py  offer.py  post.py  profile.py  settings.py  tag.py  theme.py  tier.py  webhook.py
ghostctl/utils/: __init__.py  auth.py  client_factory.py  exceptions.py  retry.py
specs/001-build-a-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-cli/contracts/: images-api.yaml  posts-api.yaml  tags-api.yaml  themes-api.yaml
tests/contract/: __init__.py  test_images_api.py  test_posts_api.py  test_tags_api.py  test_themes_api.py
tests/integration/: __init__.py  test_auth_flow.py  test_bulk_operations.py  test_config_profiles.py  test_dry_run.py  test_output_formats.py  test_retry_logic.py
tests/unit/: test_auth.py  test_config.py  test_models.py  test_render.py  test_retry.py
