[tool.poetry]
name = "ghostctl"
version = "0.1.0"
description = "Command-line tool for managing Ghost CMS"
authors = ["Mikkel Krogsholm <mikkel@brokk-sindre.dk>"]
readme = "README.md"
packages = [{include = "ghostctl"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
pyjwt = "^2.8.0"
pydantic = "^2.5.0"
rich = "^13.7.0"
pyyaml = "^6.0"
python-dateutil = "^2.9.0"
email-validator = "^2.3.0"
click = ">=8.1.0"
typer = "^0.19.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.3.0"
bandit = "^1.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ghostctl = "ghostctl.app:app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ghostctl --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["ghostctl"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]